Added margins highlights for houseRoof component

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </div>
 </footer>
 </body>
+<script src="libs.js"></script>
 <script src="components.js"></script>
 <script src="script.js"></script>
 </html>
