Moved js and css

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <link rel="stylesheet" href="static/style.css">
-  <link rel="stylesheet" href="static/calc.css">
+  <link rel="stylesheet" href="static/css/style.css">
+  <link rel="stylesheet" href="static/css/calc.css">
   <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
   <title>Stolarz</title>
 </head>
@@ -37,7 +37,7 @@
     </div>
 </footer>
 </body>
-<script src="libs.js"></script>
-<script src="components.js"></script>
-<script src="script.js"></script>
+<script src="static/js/libs.js"></script>
+<script src="static/js/components.js"></script>
+<script src="static/js/script.js"></script>
 </html>
